--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.root=DEBUG
 
+spring.datasource.url=jdbc:mysql://localhost:3306/workshop
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
